fix: minor alignment issue

--- a/src/component/menu/menu.css
+++ b/src/component/menu/menu.css
@@ -3,5 +3,4 @@
     height: 5px;
     background-color: #000000;
     margin: 6px 0;
-    cursor: pointer;
 }
